# metis

./: .gitignore  CHANGELOG.md  HANDOFF.md  PROGRESS.md  README.md  context_scale.py  memory_retrieval.py  offload_sweep.py  probe_memory_retrieval.py  pyproject.toml  realistic_conditions.py  router.py  routing_sim.py
config/: judge.yaml  pricing.yaml
config/rubrics/: summarisation.md
docs/: ARCHITECTURE.md  FINDINGS.md  FRONTIER_HEADROOM.md  FUTURE_EVALUATIONS.md  METHODOLOGY.md  NEXT_AGENT_PLAN.md  OVERNIGHT_PLAN.md  PAPER.md  RESEARCH.md  ROADMAP.md
metis/: agentic.py  cli.py  compare.py  economics.py  fingerprint.py  monitor.py  report.py  runner.py  saturation.py  schema.py  stats.py  step_depth_report.py
metis/backends/: __init__.py  base.py  cloud.py  llamacpp.py  mock.py  ollama.py
metis/scoring/: judge.py  programmatic.py  score_run.py
metis/suite/: loader.py
metis/suite/v1/: agentic.yaml  coding.yaml  instruction_following.yaml  reasoning.yaml  summarisation.yaml
metis/suite/v2/: agentic_ladder.yaml
metis/suite/v3/: adversarial_summarisation.yaml  agentic.yaml  coding.yaml  instruction_following.yaml  long_context.yaml
results/published/: README.md  router_eval_qwen3_8b_vs_deepseek_v4_pro.md  routing_qwen3_8b_vs_deepseek_v4_pro.md
results/published/comparison_local_vs_claude/: comparison.json  findings.md
results/published/context_scale_qwen3_8b/: report.md  (+1 more)
tests/: test_judge.py  test_judge_agreement.py  test_memory_retrieval.py  test_saturation.py  test_scoring.py  test_v3_suite.py
validation/: agreement.py  extract_labels.py
(+8 files in other folders)
